# archr

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  Vagrantfile  gdbserver.py  pyproject.toml  setup.cfg  setup.py
.azure-pipelines/: master.yml  nightly.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml
archr/: __init__.py  arrowhead.py  errors.py  strace_parser.py  utils.py
archr/analyzers/: __init__.py  angr_core_project.py  angr_project.py  angr_state.py  angr_ultimate_tracer.py  base.py  bintrace_qemu_tracer.py  core.py  core_fake_qemu_tracer.py  datascout.py  gdb.py  gdbserver.py  input_fd.py  ltrace.py  qemu_tracer.py  qtrace.py  rr.py  strace.py  tcpdump.py  udp_tcp_convert.py
archr/arrowheads/: __init__.py  fletcher.py
archr/arrows/: __init__.py  shellphish_qemu_fire.sh
archr/arrows/emurrate/: bundle
archr/arrows/gdb/: bundle  fire
archr/arrows/gdbserver/: bundle
archr/arrows/ltrace/: bundle  fire
archr/arrows/rr/: bundle  fire
archr/arrows/shellphish_qemu/: bundle  fire
archr/arrows/strace/: bundle  fire
archr/arsenal/: __init__.py  angr_project.py  angr_state.py  angr_ultimate_tracer.py  core.py  datascout.py  gdb.py  gdbserver.py  input_fd.py  ltrace.py  memory_map.py  nc.py  qemu_tracer.py  rr.py  strace.py  tube.py
archr/bows/: __init__.py  angr_project.py  angr_state.py  datascout.py  docker_bow.py  memory_map.py  nc.py  qemu_tracer.py  tube.py
archr/implants/: __init__.py
archr/implants/GENERIC/: bundle  fire
archr/implants/bintrace_qemu/: bundle  fire
archr/implants/emurrate/: bundle  fire
archr/implants/gdb/: bundle  fire
archr/implants/gdbserver/: fire
archr/implants/qtrace/: bundle  fire
archr/implants/shellphish_qemu/: bundle  fire
archr/implants/udp_tcp_convert/: CMakeLists.txt  bundle  fire  udp_to_tcp.c
archr/targets/: __init__.py  actions.py  base.py  docker_compose_target.py  docker_target.py  flight.py  local_target.py  qemu_system_target.py  static_corefile_environment_target.py
companion/: Dockerfile
examples/: gdbserver.py  target_interact.py
test/: test_dockertarget_simple.py
test/dockers/: build_all.sh
test/dockers/cat/: Dockerfile
test/dockers/entrypoint-env/: Dockerfile
test/dockers/entrypoint-false/: Dockerfile
test/dockers/nccat/: Dockerfile
test/dockers/stderr/: Dockerfile
tests/: common.py  manual_analyzer_tube.py  manual_bow_tube.py  test_analyzer_angr.py  test_analyzer_bintrace_qemu.py  test_analyzer_core.py  test_analyzer_datascout.py  test_analyzer_gdbserver.py  test_analyzer_inputfd.py  test_analyzer_ltrace.py  test_analyzer_qemu.py  test_analyzer_qtrace.py  test_analyzer_rr.py  test_analyzer_strace.py  test_analyzer_udp_tcp_convert.py  test_angr.py  test_angr_tracing.py  test_angr_ultimate_tracer.py  test_bow_angr.py  test_bow_core.py  test_bow_datascout.py  test_bow_gdbserver.py  test_bow_inputfd.py  test_bow_ltrace.py  test_bow_memorymap.py  test_bow_netcat.py  test_bow_qemu.py  test_bow_rr.py  test_bow_strace.py  test_bow_tube.py  test_dockertarget_crazy.py  test_dockertarget_fs.py  test_dockertarget_simple.py  test_envmatch.py  test_fs.py  test_ldd.py  test_localtarget_simple.py  test_qemu_exploit.py  test_qemu_simple.py  test_shellcode_hook.py  (+3 more)
tests/dockers/: build_all.sh
tests/dockers/cat/: Dockerfile
tests/dockers/cat-flag/: Dockerfile  flag
tests/dockers/cat-stderr/: Dockerfile
tests/dockers/crash-on-input/: Dockerfile  crash-on-input  crash-on-input.c
tests/dockers/crasher/: Dockerfile  crasher  crasher.c
tests/dockers/entrypoint-env/: Dockerfile
tests/dockers/entrypoint-false/: Dockerfile
tests/dockers/entrypoint-setarch-env/: Dockerfile
tests/dockers/entrypoint-sh-env/: Dockerfile
tests/dockers/entrypoint-true/: Dockerfile
tests/dockers/fauxware/: Dockerfile
tests/dockers/file_maps/: Dockerfile  file_maps  file_maps.c  mapped_file
tests/dockers/offsetprinter/: offsetprinter  offsetprinter.c
tests/dockers/offsetprinter32/: Dockerfile  offsetprinter
tests/dockers/offsetprinter64/: Dockerfile  offsetprinter.c
tests/dockers/shellcode_tester/: Dockerfile  shellcode_tester
tests/dockers/socat/: Dockerfile
tests/dockers/socat-echo/: Dockerfile
tests/dockers/stackprinter32/: Dockerfile  stackprinter
tests/dockers/stackprinter64/: Dockerfile  stackprinter  stackprinter.c
tests/dockers/stderr/: Dockerfile
tests/dockers/syscall_test/: Dockerfile  Makefile  syscall_test  syscall_test.c
tests/dockers/udp_tcp_convert/: Dockerfile  Makefile  tcp_client.c  udp_client.c  udp_server.c
tests/dockers/vuln_stacksmash/: Dockerfile  vuln_stacksmash
