[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archr"
description = "Target-centric program analysis."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "cle~=9.2.46",
    "docker",
    "keystone-engine",
    "nclib>=1.0.0rc3",
    "patchelf-wrapper",
    "ply",
    "pygdbmi",
    "shellphish-qemu>=0.12.2",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/angr/archr"
repository = "https://github.com/angr/archr"

[tool.setuptools.dynamic]
version = {attr = "archr.__version__"}

[tool.setuptools.packages.find]
include = ["archr*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
archr = [
    "implants/*.sh",
    "implants/*/*",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest"
]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.ruff]
line-length = 120
target-version = "py38"
select =  [
    "ALL",
]
ignore = [
    "ANN", # FIXME: Type annotations
    "C901", # Complexity
    "D", # FIXME: Docstrings
    "INP", # FIXME: this might just require relocating tests
    "PLR0912", # FIXME: Too many branches
    "PLR0915", # FIXME: Too many statements
    "PLR2004", # FIXME: magic values
    "PT", # We don't use pytest's fixtures
    "PTH", # FIXME: Use pathlib
    "S", # FIXME: Mostly asserts
    "SLF001", # FIXME: Private method use outside class
    "SIM115", # Use context handlers for opening files
    # FIXME: These errors relate to using long kwarg lists
    "FBT",
    "PLR0913",
    # FIXME: These errors relate to exceptions and exception handling.
    "EM",
    "TRY003",
]

[tool.ruff.per-file-ignores]
"archr/strace_parser.py" = [
    "ARG001",
    "N802",
    "N816",
]
