[metadata]
name = archr
version = attr: archr.__version__
url = https://github.com/angr/archr
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = Target-centric program analysis.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    shellphish_qemu>=0.12.2
    pygdbmi
    docker
    nclib>=1.0.0rc3
    patchelf-wrapper
    cle==9.2.24.dev0
    ply

python_requires = >= 3.6
include_package_data = True
packages = find:

[options.extras_require]
angr = angr==9.2.24.dev0
bintrace = bintrace
qtrace = qtrace

[options.package_data]
archr =
    implants/*.sh
    implants/*/*
    
