[metadata]
name = archr
version = attr: archr.__version__
description = Target-centric program analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/archr
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    cle==9.2.73.dev0
    docker
    nclib>=1.0.0rc3
    patchelf-wrapper
    ply
    pygdbmi
    shellphish-qemu>=0.12.2
python_requires = >=3.8
include_package_data = True

[options.extras_require]
angr =
    angr==9.2.73.dev0
bintrace =
    bintrace
qtrace =
    qtrace

[options.package_data]
archr =
    implants/*.sh
    implants/*/*
